@@ -1,0 +1,9 @@
+<ui>
+    <menubar name="MainMenu">
+        <menu name="ToolsMenu" action="ToolsMenuAction">
+            <menu name="Bookmarks" action="BookmarksAction">
+                <menuitem name="Add" action="BookmarksAddAction" />
+            </menu>
+        </menu>
+	</menubar>
+</ui>
